test(UnitTest): GameServiceTest